first addition: description

--- a/ref/biblio.bib
+++ b/ref/biblio.bib
@@ -1,3 +1,24 @@
+@book{tricart1956geomorphologie,
+  title={La g{\'e}omorphologie et la pens{\'e}e marxiste},
+  author={Tricart, Jean},
+  year={1956},
+  publisher={La Pens{\'e}e}
+}
+
+@book{gutierrez2008geomorfologia,
+  title={Geomorfolog{\'\i}a},
+  author={Guti{\'e}rrez Elorza, Mateo},
+  number={551.4 GUT},
+  year={2008}
+}
+
+@book{anderson2010geomorphology,
+  title={Geomorphology: the mechanics and chemistry of landscapes},
+  author={Anderson, Robert S and Anderson, Suzanne P},
+  year={2010},
+  publisher={Cambridge University Press}
+}
+
 @book{Wickham2017R,
   added-at = {2018-06-18T21:23:34.000+0200},
   author = {Wickham, Hadley and Grolemund, Garrett},
@@ -336,3 +357,4 @@
   volume={105},
   year={2002}
 }
+
