--- a/programa-geomorfologia.Rmd
+++ b/programa-geomorfologia.Rmd
@@ -145,17 +145,19 @@ Evita preguntar por correo electrónico, porque cualquier consulta que realices,
 
 * Tema 1. Epistemología, conceptos, bases geológicas e introducción a los procesos de la superficie terrestre. Páginas en @gutierrez2008geomorfologia: 1 a 45, ambas inclusive. Páginas @anderson2010geomorphology: 1 a 15, ambas inclusive.
 
-* Tema 2. Meteorización y tiempo en geomorfología. Técnicas de datación relativas, técnicas de datación absoluta. En @gutierrez2008geomorfologia: capítulo 5 y páginas 52 a 54, ambas inclusive.
+* Tema 2. Tiempo en geomorfología. Técnicas de datación relativas, técnicas de datación absoluta. En @gutierrez2008geomorfologia: páginas 52 a 54, ambas inclusive. En @anderson2010geomorphology: capítulo 6.
 
-* Tema 3. Procesos fluviales. Conceptos básicos de hidrología e hidráulica fluvial, procesos fluviales. Formas y depósitos fluviales (aluvionamientos, terrazas, diques, barras, etc.), abanicos. En @gutierrez2008geomorfologia: capítulos 8 y 9.
+* Tema 3. Meteorización. En @gutierrez2008geomorfologia: capítulo 5. En @anderson2010geomorphology: capítulo 7.
 
-* Tema 4. Procesos de laderas y movimientos en masa. Laderas, balance de masa, y otros. Procesos elementales: rainsplash, solifluxión, procesos biogeomorfológicos, y otros. Movimientos de masa (procesos gravitacionales/de laderas): principios físicos, tipologías (caída, deslizamiento, flujo, reptación), debris flow, modelos de laderas/morfometría. En @gutierrez2008geomorfologia: capítulo 7.
+* Tema 4. Procesos fluviales. Conceptos básicos de hidrología e hidráulica fluvial, procesos fluviales. Formas y depósitos fluviales (aluvionamientos, terrazas, diques, barras, etc.), abanicos. En @gutierrez2008geomorfologia: capítulos 8 y 9.
 
-* Tema 5. Procesos litorales. Aguas marinas litorales, productos característicos de la dinámica litoral. Básicos: conceptos, dinámica de las aguas litorales (oleajes, mareas, corrientes). Zonas, subzonas, elementos del litoral, productos morfológicos (costas arenosas, costas rocosas). En @gutierrez2008geomorfologia: capítulo 11.
+* Tema 5. Procesos de laderas y movimientos en masa. Laderas, balance de masa, y otros. Procesos elementales: rainsplash, solifluxión, procesos biogeomorfológicos, y otros. Movimientos de masa (procesos gravitacionales/de laderas): principios físicos, tipologías (caída, deslizamiento, flujo, reptación), debris flow, modelos de laderas/morfometría. En @gutierrez2008geomorfologia: capítulo 7.
 
-* Tema 6. Geomorfología kárstica. En @gutierrez2008geomorfologia: capítulo 6.
+* Tema 6. Procesos litorales. Aguas marinas litorales, productos característicos de la dinámica litoral. Básicos: conceptos, dinámica de las aguas litorales (oleajes, mareas, corrientes). Zonas, subzonas, elementos del litoral, productos morfológicos (costas arenosas, costas rocosas). En @gutierrez2008geomorfologia: capítulo 11.
 
-* Tema 7. Geomorfología climática: medios áridos y semi-áridos, dominio tropical. En @gutierrez2008geomorfologia: capítulos 12, 16, 17 y 18.
+* Tema 7. Geomorfología kárstica. En @gutierrez2008geomorfologia: capítulo 6.
+
+* Tema 8. Geomorfología climática: medios áridos y semi-áridos, dominio tropical. En @gutierrez2008geomorfologia: capítulos 12, 16, 17 y 18.
 
 ## Referencias
 
