--- a/programa-geomorfologia.Rmd
+++ b/programa-geomorfologia.Rmd
@@ -55,7 +55,7 @@ __Me apoyaré en [R](https://www.r-project.org/) y en [GRASS GIS](https://grass.
 
 En cuanto a escribir código, te adelanto que, para superar las dificultades y los desafíos inherentes de las asignaciones y el manuscrito, tendrás que:
 
-1. Contar con el profesor. No te abandonaré a tu suerte al analizar datos. No hay horario para pedirme ayuda, y pregunta lo que quieras preguntar. Intentaré darte soluciones cuando te tranques, pero con la condición de que, antes de preguntarme, intentes avanzar soluciones del problema. Lee el punto 3 más abajo.
+1. Contar con el profesor. No te abandonaré a tu suerte al analizar datos. No hay horario para pedirme ayuda, y pregunta lo que quieras preguntar. Intentaré darte soluciones cuando te tranques, pero con la condición de que, antes de preguntarme, intentes avanzar soluciones del problema. Lee los puntos 3 y 4 más abajo.
 
 2. Sufrir. Nadie dijo que fajarse con geomorfometría mediante R, GRASS GIS o Python fuese placentero. A diferencia de los software de pago, aquí no hay un botoncito mágico que lo resuelve todo. Cuesta esfuerzo, mucho; eso sí, es gratis, como todas las cosas buenas. Además, te obliga a la abstracción y a la resolución de problemas, algo que siempre viene bien en términos profesionales y académicos. Adelanto también que este mismo principio aplica a la redacción; escribir concisamente apoyándote en tus resultados es tarea complicada. Por lo tanto, sufre, pero con motivo.
 
@@ -64,8 +64,7 @@ En cuanto a escribir código, te adelanto que, para superar las dificultades y l
       b. A mi correo: jmartinez19\@uasd.edu.do
       c. Creando *issues* en GitHub.
 
-4. Utilizar estrategias proactivas para pedir ayuda. Elimina esta expresión de tu vocabulario: "da error". Con eso nadie podrá ayudarte. Lo importante es informar qué intentaste hacer y qué error o problema te surgió. Por ello, cuando pidas ayuda, deberás ofrecer un ejemplo reproducible. En la medida de lo posible, evita las capturas de pantalla y prefiere código reproducible + error. Si la captura de pantalla es el único camino que tienes para mostrar tu problema, entonces úsala, pero no olvides incluir los dos elementos primordiales: 1) qué intentaste hacer y 2) qué error/problema se te presentó. Otras estrategias son: consultar posibles soluciones a tu problema en foros ya existentes (como stackoverflow), probar alternativas, documentar lo que hiciste, explicar qué entiendes que pudo provocar el error. En definitiva, sólo pide ayuda cuando realmente te hayas "trancado".
-
+4. Al hilo del punto anterior, utilizar estrategias proactivas para pedir ayuda. Elimina esta expresión de tu vocabulario: "da error". Con eso nadie podrá ayudarte. Lo importante es informar qué intentaste hacer y qué error o problema te surgió. Por ello, cuando pidas ayuda, deberás ofrecer un ejemplo reproducible. En la medida de lo posible, evita las capturas de pantalla y prefiere código reproducible + error. Si la captura de pantalla es el único camino que tienes para mostrar tu problema, entonces úsala, pero no olvides incluir los dos elementos primordiales: 1) qué intentaste hacer y 2) qué error/problema se te presentó. Otras estrategias son: consultar posibles soluciones a tu problema en foros ya existentes (como stackoverflow), probar alternativas, documentar lo que hiciste, explicar qué entiendes que pudo provocar el error. En definitiva, sólo pide ayuda cuando realmente te hayas "trancado".
 
 No tendrás que preocuparte por el hardware (ya me ensucio yo las manos con esa cosa tan mundana llamada computadora), pero sí ocúpate por escribir código con sentido, por razonar bien tus asignaciones y, especialmente, por escribir bien tu manuscrito; escribe que se te entienda, yo pediré a monesvol para que te ilumine. Dispondrás de un servidor de RStudio de modestas prestaciones administrado por "yo mesmamente", con los paquetes requeridos en el curso ya pre-instalados. Así podrás realizar tus asignaciones sobre geomorfometría y tu manuscrito sin preocuparte de instalaciones de software/paquetes. Queda a opción tuya hacer visualizaciones de datos y mapas usando software de interfaz gráfica (e.g. QGIS), pero necesitarás instalarlo en tu propia PC.
 
@@ -75,7 +74,7 @@ Parecería "natural" utilizar interfaz gráfica de usuario para analizar datos g
 
 | Ítem | % de la \ nota final |
 |-|-:|
-| [Manuscrito (basado en trabajo de campo)](#manuscrito) | 50% |
+| [Manuscrito (basado en datos pre-existentes)](#manuscrito) | 50% |
 | [Presentación oral](#presentación-oral) | 20% |
 | [Asignaciones](#asignaciones) | 30% |
 
@@ -134,10 +133,6 @@ Toma en consideración lo siguiente:
 ### Presentación oral
 
 Dispondrás de 15 minutos para presentar oralmente tu trabajo al final del semestre. Valoraré el dominio que muestres del tema y de tus resultados.
-
-### Trabajo de campo
-
-Dependerá mucho del tema que elijas. En todo caso, incluirá recogida de datos que posteriormente puedan procesarse informáticamente.
 
 ### Asignaciones
 
